# microbiome_eval

./: .gitignore  CLAUDE.md  README.md  main.py  myst.yml  pyproject.toml
.claude/skills/claim_methodology_extraction/: SKILL.md
.claude/skills/create_evaluation_item/: SKILL.md
notebooks/: Exploration 1.ipynb  Exploration 2.ipynb
scripts/: download_data.sh  find_hard_microbiome_questions.py  hmdb.py  launch_cmd.sh  launch_vllm_proxy_server.py  launch_vllm_server.py  launch_vllm_server.sh  monitor_vllm_servers.py  submit_job.py
src/microbiome_eval/: cache.py  evaluate.py  llm.py
src/microbiome_eval/tasks/: __init__.py  base.py  disease_clf.py  hard_microbiome_qs.py  labbench2_utils.py  lit_review_reranking.py  medqa.py  methods_errors.py  microbiome_litqa.py  microbiome_reasoning.py
src/microbiome_eval/tools/: pubmed_search.py
