[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "openpyxl",
    "matplotlib",
    "tqdm",
    "requests>=2.34.2",
    "huggingface_hub",
    "openai>=2.37.0",
    "datasets>=4.8.5",
    "pydantic-ai>=1.106.0",
    "pymupdf>=1.27.2.3",
    "tokenizers<=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
